--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1 class="one">
                 <span id="name">Phương Chi àaa</span>
             </h1>
-            <p class="two" id="greetingText">Mình biết nhau được 1 tháng rồi em nhỉ ^^</p>
+            <p class="two" id="greetingText">Mình quen nhau được 1 tháng rồi em nhỉ ^^</p>
         </div>
 
         <div class="three">
@@ -38,7 +38,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Chúc em bước vào tuổi 20 luôn luôn xinh đẹp, rạng rỡ, có được nhiều năng lượng và niềm vui, đạt được những điều em mong muốn trong tương lai nhé. Happy birthday to youuu!!
+                Chúc em bước vào tuổi 20 luôn luôn xinh đẹp, rạng rỡ, có được nhiều năng lượng niềm vui, học thật giỏi và đạt được những điều em mong muốn trong tương lai nhé. Happy birthday to youuu!!🎂🎉😊
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
