--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1 class="one">
                 <span id="name">Phương Chi àaa</span>
             </h1>
-            <p class="two" id="greetingText">Mình quen nhau được 1 tháng rồi em nhỉ ^^</p>
+            <p class="two" id="greetingText">Mình biết nhau được 1 tháng hơn rồi em nhỉ ^^</p>
         </div>
 
         <div class="three">
